Fix dark mode

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -14,6 +14,8 @@
 
     transition-duration: 0.4s;
     transition-property: background, box-shadow;
+
+    background: var(--primary-color);
 }
 
 .logo {
